--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -12,16 +12,16 @@
     <div class="col-md-4">
         <h2>Cadastro de cursos</h2>
         <p>
-            Cadastre os cursos que poderão participar dos seus vestibulares.
+            Gerencie os cursos que poderão participar dos seus vestibulares.
         </p>
         <p><a class="btn btn-default" href="{% url 'cadastro_cursos' %}">Acessar &raquo;</a></p>
         
     </div>
     <div class="col-md-4">
-        <h2>Criação de vestibulares</h2>
-        <p>Crie os vestibulares que o sistema irá gerenciar.</p>
-        <!-- <p><a class="btn btn-default" href=" url 'criacao_vestibulares' ">Acessar &raquo;</a></p> -->
-        <p><a class="btn btn-default">Em construção &raquo;</a></p>
+        <h2>Cadastro de vestibulares</h2>
+        <p>Gerencie os vestibulares.</p>
+        <p><a class="btn btn-default" href="{% url 'cadastro_vestibulares' %}">Acessar &raquo;</a></p>
+        <!-- <p><a class="btn btn-default">Em construção &raquo;</a></p> -->
     </div>
     <div class="col-md-4">
         <h2>Inscrição de candidatos</h2>
