ajustes nos nomes

--- a/app/templates/app/lista_vestibulares.html
+++ b/app/templates/app/lista_vestibulares.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Cadastro de vestibulares</h1>
+    <h1>Lista de vestibulares</h1>
 </div>
 
 <table class="table">
