--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,23 +10,22 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Cadastro de cursos</h2>
+        <h2>Lista de cursos</h2>
         <p>
-            Gerencie os cursos que poderão participar dos seus vestibulares.
+            Lista os cursos que poderão participar dos seus vestibulares.
         </p>
-        <p><a class="btn btn-default" href="{% url 'cadastro_cursos' %}">Acessar &raquo;</a></p>
+        <p><a class="btn btn-default" href="{% url 'lista_cursos' %}">Acessar &raquo;</a></p>
         
     </div>
     <div class="col-md-4">
-        <h2>Cadastro de vestibulares</h2>
-        <p>Gerencie os vestibulares.</p>
-        <p><a class="btn btn-default" href="{% url 'cadastro_vestibulares' %}">Acessar &raquo;</a></p>
+        <h2>Lista de vestibulares</h2>
+        <p>Veja os vestibulares cadastrados.</p>
+        <p><a class="btn btn-default" href="{% url 'lista_vestibulares' %}">Acessar &raquo;</a></p>
         <!-- <p><a class="btn btn-default">Em construção &raquo;</a></p> -->
     </div>
     <div class="col-md-4">
-        <h2>Inscrição de candidatos</h2>
-        <p>Inscreva candidatos nos vestibulares e consulte as inscrições em cada curso.</p>
-        <!-- <p><a class="btn btn-default" href=" url 'inscricao_vestibulares' ">Acessar &raquo;</a></p> -->
+        <h2>Lista de candidatos</h2>
+        <p>Veja os candidatos inscritos nos vestibulares.</p>
         <p><a class="btn btn-default">Em construção &raquo;</a></p>
     </div>
 </div>
