--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,7 +6,7 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
+    Software Solution<br />
     Rua do Código, 1010<br />
     <abbr title="Telefone">Tel:</abbr>
     91010-1010
